--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,7 +45,8 @@ section#choices .choice{
     text-align: center;
     padding: 20px;
     border-radius: 10px;
-    transition: background .3s ease;
+    transition: background .3s ease,
+                color .3s ease;
     font-size: 2rem;
     text-transform: capitalize;
     color: rgb(80, 78, 78);
