adding life and level on front

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,18 @@ div#question{
     text-align: center;
 }
 
+div#question strong {
+    display: flex;
+    justify-content: space-between;
+}
+
+div#question span {
+    display: inline-block;
+}
+
+div#question span i {
+    color: red;
+}
 /* Question End */
 
 /* Choices Start */
